--- a/page-staff.html
+++ b/page-staff.html
@@ -80,139 +80,97 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <h2>News</h2>
+                    <h2>Our Staff</h2>
                     <div class="breadcrumb color-light-blue">
-                        Home >> News
+                        Home >> Our Staff
                     </div>
                 </div>
             </div>
         </div>
     </section>
 
-    <section class="news-section p-t-80 p-b-50">
+    <section class="home-our-doctors p-t-80 p-b-80">
         <div class="container">
             <div class="row">
-                <div class="col-md-6">
-                    <div class="news-box with-img">
-                        <img src="img/img-news.jpg" alt="granada-news" title="Granda News"/>
-                        <div class="news-box-content">
-                            <h6>We have moved to our new place at 70 Attfield Street Maddington</h6>
-                            <p class="news-date">March 14, 2017</p>
-                            <a href="page-news-single.html" class="btn-secondary">Read More</a>
+                <div class="col-md-4">
+                    <div class="doctor-box text-center b-s-50">
+                        <img src="img/dr-arosha.jpg" alt="doctor-arosha"/>
+                        <div class="doctor-box-content">
+                            <h6>Dr Arosha Vidyabhushana</h6>
+                            <p>General Practitioner</p>
                         </div>
-                        <div class="clearfix"></div>
-                    </div>
-                </div>
-                <div class="col-md-6">
-                    <div class="news-box without-img">
-                        <div class="news-box-content">
-                            <h6>We have moved to our new place at 70 Attfield Street Maddington</h6>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-                                ut labore et dolore magna aliqua...</p>
-                            <p class="news-date">March 14, 2017</p>
-                            <a href="page-news-single.html" class="btn-secondary">Read More</a>
-                        </div>
-                        <div class="clearfix"></div>
-                    </div>
-                </div>
-                <div class="col-md-6">
-                    <div class="news-box with-img">
-                        <img src="img/img-news.jpg" alt="granada-news" title="Granda News"/>
-                        <div class="news-box-content">
-                            <h6>We have moved to our new place at 70 Attfield Street Maddington</h6>
-                            <p class="news-date">March 14, 2017</p>
-                            <a href="page-news-single.html" class="btn-secondary">Read More</a>
-                        </div>
-                        <div class="clearfix"></div>
-                    </div>
-                </div>
-                <div class="col-md-6">
-                    <div class="news-box with-img">
-                        <img src="img/img-news.jpg" alt="granada-news" title="Granda News"/>
-                        <div class="news-box-content">
-                            <h6>We have moved to our new place at 70 Attfield Street Maddington</h6>
-                            <p class="news-date">March 14, 2017</p>
-                            <a href="page-news-single.html" class="btn-secondary">Read More</a>
-                        </div>
-                        <div class="clearfix"></div>
-                    </div>
-                </div>
-                <div class="col-md-6">
-                    <div class="news-box without-img">
-                        <div class="news-box-content">
-                            <h6>We have moved to our new place at 70 Attfield Street Maddington</h6>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-                                ut labore et dolore magna aliqua...</p>
-                            <p class="news-date">March 14, 2017</p>
-                            <a href="page-news-single.html" class="btn-secondary">Read More</a>
-                        </div>
-                        <div class="clearfix"></div>
-                    </div>
-                </div>
-                <div class="col-md-6">
-                    <div class="news-box without-img">
-                        <div class="news-box-content">
-                            <h6>We have moved to our new place at 70 Attfield Street Maddington</h6>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-                                ut labore et dolore magna aliqua...</p>
-                            <p class="news-date">March 14, 2017</p>
-                            <a href="page-news-single.html" class="btn-secondary">Read More</a>
-                        </div>
-                        <div class="clearfix"></div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section class="we-re-open p-t-60 p-b-60 bg-light-blue">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-3">
-                    <div class="we-re-open-left text-center color-white">
-                        <img src="img/icon-clock.png"/>
-                        <h4>We're Open</h4>
-                        <h6>7 Days a Week</h6>
                     </div>
                 </div>
                 <div class="col-md-4">
-                    <div class="we-re-open-center color-white">
-                        <div class="we-re-open-times">
-                            <div class="we-re-open-time-item b-s-20">
-                                <p class="time-left">Mon to Fri</p>
-                                <p class="time-right">: 08.00 am - 06.00 pm </p>
-                            </div>
-                            <div class="we-re-open-time-item b-s-20">
-                                <p class="time-left">Saturday</p>
-                                <p class="time-right">: 09.00 am - 04.00 pm </p>
-                            </div>
-                            <div class="we-re-open-time-item b-s-20">
-                                <p class="time-left">Sunday</p>
-                                <p class="time-right">: 09.30 am - 04.00 pm </p>
-                            </div>
-                            <div class="we-re-open-time-item">
-                                <p class="time-left">Public Holidays</p>
-                                <p class="time-right">: Closed </p>
-                            </div>
+                    <div class="doctor-box text-center b-s-50">
+                        <img src="img/dr-fatin.jpg" alt="doctor-fatin"/>
+                        <div class="doctor-box-content">
+                            <h6>Dr Fatin Wajdi</h6>
+                            <p>General Practitioner</p>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-5">
-                    <div class="we-re-open-right">
-                        <div class="need-assistance-box">
-                            <div class="need-assistance-box-content">
-                                <p>If You Need Immediate Assistance Please Contact Us </p>
-                                <div class="assistance-details-box">
-                                    <img src="img/img-assistance.jpg" alt="assistance-img"/>
-                                    <div class="assistance-details color-white">
-                                        <a href="tel:94594414" class="assis-tel">9459 4414</a>
-                                        <a href="mailto:reception@granadamedical.com.au" class="assis-mail">reception@granadamedical.com.au</a>
-                                    </div>
-                                </div>
-                            </div>
-                            <!--<div class="need-assistance-box-shadow"></div>-->
+                <div class="col-md-4">
+                    <div class="doctor-box text-center b-s-50">
+                        <img src="img/dr-nirosha.jpg" alt="doctor-nirosha"/>
+                        <div class="doctor-box-content">
+                            <h6>Dr Nirosha Abeysekara</h6>
+                            <p>General Practitioner</p>
                         </div>
-                        <div class="clearfix"></div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="doctor-box text-center b-s-50">
+                        <img src="img/dr-begum.jpg" alt="doctor-Tabasum"/>
+                        <div class="doctor-box-content">
+                            <h6>Dr Tabasum Begum</h6>
+                            <p>General Practitioner</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="doctor-box text-center b-s-50">
+                        <img src="img/dr-crisp.jpg" alt="doctor-Beverley"/>
+                        <div class="doctor-box-content">
+                            <h6>Dr Beverley Crisp</h6>
+                            <p>General Practitioner</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="doctor-box text-center b-s-50">
+                        <img src="img/dr-phillips.jpg" alt="doctor-Sherlene"/>
+                        <div class="doctor-box-content">
+                            <h6>Dr Sherlene Phillips</h6>
+                            <p>General Practitioner</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="doctor-box text-center">
+                        <img src="img/dr-maria.jpg" alt="doctor-Maria"/>
+                        <div class="doctor-box-content">
+                            <h6>Dr Maria del Pilar Zunilde Diaz Orbe</h6>
+                            <p>General Practitioner</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="doctor-box text-center">
+                        <img src="img/dr-common.jpg" alt="doctor-Mark"/>
+                        <div class="doctor-box-content">
+                            <h6>Dr Mark Jenkins</h6>
+                            <p>General Practitioner</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="doctor-box text-center">
+                        <img src="img/dr-sylvia.jpg" alt="doctor-Sylvia"/>
+                        <div class="doctor-box-content">
+                            <h6>Dr Sylvia Nicholls</h6>
+                            <p>General Practitioner</p>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -239,41 +197,37 @@
                 <div class="row">
                     <div class="col-md-4">
                         <h5 class="footer-title b-s-30">about granada</h5>
-                        <p class="b-s-30">Granada Medical Practice is a purpose-built family medical centre located in
-                            Maddington. Our
+                        <p class="b-s-30">Granada Medical Practice is a purpose-built family medical centre located in Maddington. Our
                             staff look forward to welcoming you and provide the best possible care to you and you family
                             members.</p>
-                        <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fgranadamedical&tabs&width=340&height=70&small_header=true&adapt_container_width=false&hide_cover=false&show_facepile=false&appId=324555369255445"
-                                width="340" height="70" style="border:none;overflow:hidden" scrolling="no"
-                                frameborder="0" allowfullscreen="true"
-                                allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
+                        <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fgranadamedical&tabs&width=340&height=70&small_header=true&adapt_container_width=false&hide_cover=false&show_facepile=false&appId=324555369255445" width="340" height="70" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
                     </div>
                     <div class="col-md-4">
                         <div class="row">
                             <div class="col-md-6">
                                 <h5 class="footer-title b-s-30">Site links</h5>
                                 <ul class="footer-menu">
-                                    <li><a href="index.html"> Home </a></li>
-                                    <li><a href="page-about-us.html"> About Us </a></li>
-                                    <li><a href="page-services.html"> Services </a></li>
-                                    <li><a href="#"> News </a></li>
-                                    <li><a href="#"> Staff </a></li>
-                                    <li><a href="#"> Resources </a></li>
-                                    <li><a href="#"> Contact Us </a></li>
-                                    <li><a href="#"> Book Online </a></li>
+                                    <li> <a href="index.html"> Home </a> </li>
+                                    <li> <a href="page-about-us.html"> About Us </a> </li>
+                                    <li> <a href="page-services.html"> Services </a> </li>
+                                    <li> <a href="#"> News </a> </li>
+                                    <li> <a href="#"> Staff </a> </li>
+                                    <li> <a href="#"> Resources </a> </li>
+                                    <li> <a href="#"> Contact Us </a> </li>
+                                    <li> <a href="#"> Book Online </a> </li>
                                 </ul>
                             </div>
                             <div class="col-md-6">
                                 <h5 class="footer-title b-s-30">Services</h5>
                                 <ul class="footer-menu">
-                                    <li><a href="#"> Women's Health </a></li>
-                                    <li><a href="#"> Men's Health </a></li>
-                                    <li><a href="#"> Child and Adolescent Health </a></li>
-                                    <li><a href="#"> Immunisation </a></li>
-                                    <li><a href="#"> Investigations </a></li>
-                                    <li><a href="#"> Minor Procedures </a></li>
-                                    <li><a href="#"> Health Checks </a></li>
-                                    <li><a href="#"> Chronic Disease Management</a></li>
+                                    <li> <a href="#"> Women's Health </a> </li>
+                                    <li> <a href="#"> Men's Health </a> </li>
+                                    <li> <a href="#"> Child and Adolescent Health </a> </li>
+                                    <li> <a href="#"> Immunisation </a> </li>
+                                    <li> <a href="#"> Investigations </a> </li>
+                                    <li> <a href="#"> Minor Procedures </a> </li>
+                                    <li> <a href="#"> Health Checks </a> </li>
+                                    <li> <a href="#"> Chronic Disease Management</a> </li>
                                 </ul>
                             </div>
                         </div>
@@ -308,8 +262,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
-                        <p>© Copyright 2022 Granada Medical. All Rights Reserved. Site by <a
-                                href="https://infoconnect.com.au/" target="_blank">
+                        <p>© Copyright 2022 Granada Medical. All Rights Reserved. Site by <a href="https://infoconnect.com.au/" target="_blank">
                             Infoconnect </a></p>
                     </div>
                 </div>
