--- a/page-services.html
+++ b/page-services.html
@@ -58,7 +58,7 @@
                             <li><a href="page-about-us.html"> about </a></li>
                             <li><a href="page-services.html"> services </a></li>
                             <li><a href="page-news.html"> news </a></li>
-                            <li><a href="#"> staff </a></li>
+                            <li><a href="page-staff.html"> staff </a></li>
                             <li><a href="#"> resources </a></li>
                             <li><a href="#"> contacts </a></li>
                         </ul>
